Dodalem strony logowania i rejestracji

--- a/Views/User/UserView.cshtml
+++ b/Views/User/UserView.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "UserView";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>UserView</h2>
@@ -64,3 +65,4 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.userID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
