zabawy na początku z bazą

--- a/Views/Gathering/Gathering.cshtml
+++ b/Views/Gathering/Gathering.cshtml
@@ -1,13 +1,15 @@
 ﻿@model IEnumerable<Prezentomat.Models.GatheringClass>
 
 @{
-    ViewBag.Title = "GatheringView";
+    ViewBag.Title = "Gathering";
 }
 
-<h2>GatheringView</h2>
+<h2>Aktywne zbiórki</h2>
+
+<b>To tylko strona testowa, żeby sprawdzić, czy baza danych działa</b>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Dodaj zbiórkę", "Create")
 </p>
 <table class="table">
     <tr>
