logowanie przeniesione na prawo

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,7 @@
 
 <ul class="nav navbar-nav navbar-right">
     <li>
-    <li>@Html.ActionLink("Rejestruj", "Register", "User")</li>
+    <li>@Html.ActionLink("Rejestruj", "Regist", "User")</li>
     <li>@Html.ActionLink("Zaloguj", "Login", "User")</li>
     </li>
 
