dodalem obsluge logowania i rejestracji bez współpracy z bazą danych

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -38,7 +38,7 @@ color: black;
 }
 
 .textbox {
-    width: 100%;
+    width: 280px;
     overflow: hidden;
     font-size: 20px;
     padding: 8px 0;
