--- a/Views/User/UserView.cshtml
+++ b/Views/User/UserView.cshtml
@@ -62,7 +62,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.user_id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.user_id }) | <!--blad w tej lini-->
     @Html.ActionLink("Back to List", "Index")
 </p>
 
