--- a/Content/Site.css
+++ b/Content/Site.css
@@ -23,13 +23,13 @@ textarea {
     max-width: 280px;
 }
 
-.login-box{
-width: 280px;
+.loginbox{
+width: 400px;
 color: black;
 
 }
 
-.login-box h1{
+.loginbox h2{
     float: left;
     font-size: 40px;
     border-bottom: 6px solid #4caf50;
@@ -37,17 +37,19 @@ color: black;
     padding: 13px 0
 }
 
+
 .textbox {
-    width: 280px;
+    width: 440px;
     overflow: hidden;
-    font-size: 20px;
-    padding: 8px 0;
+    text-align: right;
+    font-size: 15px;
+    padding: 4px 0;
     margin: 8px 0;
-    border-bottom: 1px solid #4caf50;
+    border-bottom: 2px solid #4caf50;
 }
 
 .btn {
-    width: 100%;
+    width: 400px;
     background: none;
     border: 2px solid #4caf50;
     color: black;
