--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -7,23 +7,38 @@
 
 @using (Html.BeginForm())
 {
-<div class="login-box">
-    <h1>Login</h1>
-       
-    <div class="textbox">
-        <label>Email</label>
-        @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-    </div>
-   
-    <div class="textbox">
-        <label>Password</label>
-        @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-    </div>    
-   
-     <input type="submit" value="Sign in" class="btn" />
+<div class="form-horizontal">
+    <div class="loginbox">
+        <h2>Zaloguj</h2>
 
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <div class="textbox">
+                @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <!---->
+        <div class="form-group">
+            <div class="textbox">
+                @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Sign in" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
 </div>
 }
 
