--- a/Views/Shared/_UserPartial.cshtml
+++ b/Views/Shared/_UserPartial.cshtml
@@ -6,12 +6,12 @@
 
 @*tutaj trzeba znaleźć style z bootstrapa chyba pasujące, żeby to wyglądało ładnie jak cały layout*@
 
-<div style="font-size:20px; float:right; color:white"> 
+<div style="font-size:20px; float:right; color:white; padding:10px"> 
    
      Witaj @user_name
     
     
-
+    
 </div>
 
 
