--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,13 +2,31 @@
     ViewBag.Title = "Strona główna";
 }
 
-<div>
-    <h1>
-        Witaj na stronie głównej!
-    </h1>
 
-    <p>
-        Strona w budowie :)
-    </p>
-
-</div>
+    <div class="row">
+        <section class="col-xl-12" data-bg="~/Images/1.jpg">
+            <figure>
+                
+            </figure>
+        </section>
+    </div>
+    <div class="row">
+        <section class="col-xl-12">
+            <figure>
+                <img src="~/Images/2.jpg" class="img-responsive"/>
+            </figure>
+        </section>
+    </div>
+    <div class="row">
+        <section class="col-xl-12">
+            <figure>
+                <img src="~/Images/3.jpg" class="img-responsive" />
+            </figure>
+        </section>
+        <div class="alert alert-success">
+            asdasdasdasda
+        </div>
+        <button type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-fire"></span> Search
+        </button>
+    </div>
