--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -5,9 +5,13 @@
 
 <ul class="nav navbar-nav navbar-right">
     <li>
-    <li>@Html.ActionLink("Rejestruj", "Regist", "User")</li>
-    <li>@Html.ActionLink("Zaloguj", "Login", "User")</li>
+    <li>
+        @Html.ActionLink("Rejestruj", " Regist", "User")
     </li>
+    <li>
+        @Html.ActionLink("Zaloguj", " Login", "User")
+    </li>
+    <li>
 
 </ul>
 
