--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -8,37 +8,37 @@
 @using (Html.BeginForm())
 {
 <div class="form-horizontal">
-    <div class="loginbox">
-        <h2>Zaloguj</h2>
+    
+        <h1 style="padding:10px; font-size:40px; border-bottom: 4px solid #4caf50;">Zaloguj</h1>
 
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <div class="textbox">
-                @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-        <!---->
-        <div class="form-group">
-            <div class="textbox">
-                @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    <div class="form-group"  style="padding: 10px; font-size: 20px; border-bottom: 2px solid #4caf50;">
+
+        @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Sign in" class="btn btn-default" />
-            </div>
+    </div>
+        <!---->
+    <div class="form-group" style="padding: 10px;font-size: 20px; border-bottom: 2px solid #4caf50;">
+
+        @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+        </div>
+
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Sign in" class="btn btn-default" />
         </div>
     </div>
+    
 </div>
 }
 
