--- a/Views/Shared/_UserPartial.cshtml
+++ b/Views/Shared/_UserPartial.cshtml
@@ -11,7 +11,7 @@
     
     <li>
     <li><a>Witaj @user_name</a></li>
-    <li><a>Wyloguj</a></li>
+    <li>@Html.ActionLink("Wyloguj", "Logout", "User")</li>
     </li>
 
 
