--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Strona Domowa", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Zbiórki", "Index", "Gathering")</li>
+
+                    <li>@*@Html.ActionLink("Zbiórki", "Index", "Gathering")*@</li>
+
                     <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")   @*//odniesienie do widoku częściowego gdzie są linki do logowania i rejestracji
