wygląd strony layoutu

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,14 +1,16 @@
 ﻿@{
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
     ViewBag.Title = "Strona główna";
 }
-
-<div>
+<main>
+    
     <h1>
         Witaj na stronie głównej!
+
     </h1>
 
-    <p>
-        Strona w budowie :)
-    </p>
-
-</div>
+        <p>
+            Strona w budowie :)
+        </p>
+       
+</main>
