--- a/Content/FlexStyle.css
+++ b/Content/FlexStyle.css
@@ -1,25 +1,19 @@
-﻿
+﻿/**/
+/**/
+/*główny template*/
+/**/
 body {
     background-color: #282923;
     margin: 0;
 }
 
 .Flex-container {
-    width: 70vw;
+    width: 100vw;
     height: 100vh;
     background-color: darkgray;
     display: flex;
     flex-direction: column;
     margin: auto;
-}
-
-
-.Flex-container > main{
-    text-align: center;
-    background-color: white;
-    width: 100%;
-    height: 91%;
-    flex-grow: 2;
 }
 
 .Flex-container > header{
@@ -36,13 +30,13 @@ body {
 .Flex-container > footer {
     width: 100%;
     height: 3%;
-    background-color: white;
+    background-color: black;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     flex-grow: 0;
-    
+    color: white;
 }
 
 .Flex-header-logo {
@@ -67,6 +61,22 @@ body {
     flex-grow: 2;
 }
 
+    header a {
+        color: white;
+        margin-right: 2%;
+        text-align: center;
+        text-decoration: none;
+        font-size: 18px;
+        cursor: pointer;
+    }
+
+        header a:hover {
+            opacity: 0.4;
+        }
+/*zakomentowane ponieważ clasy nie działają w html helpers.
+    Obejście problemu jest powyżej z "header".
+*/
+/*
 .nav-button {
     color: white;
     margin-right: 2%;
@@ -77,14 +87,15 @@ body {
 }
 
     .nav-button:hover {
-        font-weight: bold;
+        opacity: 0.3;
     }
-
+*/
 .Flex-header-socials {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    font-family: Calibri;
     flex-grow: 1;
     
 }
@@ -94,6 +105,93 @@ body {
     margin-left: 5px;
 }
 
+
+/*Część odpowiedzialna za logowanie i rejestracje*/
+
+.Flex-container > main {
+    text-align: center;
+    background: rgb(132,41,175);
+    background: linear-gradient(45deg, rgba(132,41,175,1) 35%, rgba(32,179,235,1) 100%);
+    width: 100%;
+    height: 91%;
+    flex-grow: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.Flex-box-row{
+    display: flex;
+    flex-direction: row;
+}
+
+.Flex-box-col {
+    background-color: #0D0D0D;
+    border-radius: 20px;
+    padding: 3vw 3vh;
+    font-family: Calibri;
+    font-weight: bold;
+    color: white;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+
+
+    .Flex-box-col > input {
+        align-self: flex-end;
+        background: none;
+        color: white;
+        padding: 10px 25px;
+        border: none;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+        .Flex-box-col > input:hover {
+            opacity: 0.3;
+        }
+
+.Flex-box-field {
+    background-color: white;
+    height: 36px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+    .Flex-box-field img{
+        height: 30px;
+        width: 30px;
+        margin: 3px;
+    }
+
+    .Flex-box-field input {
+        height: 34px;
+        width: 20vw;
+        border: none;
+        font-family: Calibri;
+        font-size: 20px;
+    }
+
+.Flex-box-checkbox{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+
+}
+
+
+
+/*Część odpowiedzialna za responsywność*/
 @media screen and (max-width: 1090px) {
     .Flex-container > header {
         height: 15%;
