--- a/Views/User/Regist.cshtml
+++ b/Views/User/Regist.cshtml
@@ -1,76 +1,70 @@
 ﻿@model Prezentomat.Models.UserClass
 
 @{
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
     ViewBag.Title = "Regist";
 }
 
 
+<main>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-  
-    
-<div class="form-horizontal">
+        <h1>Prezentomat</h1>
+        <div class="Flex-box-row">
 
-    <h1 style="padding:10px; font-size:40px; border-bottom: 4px solid #4caf50;">Zaloguj</h1>
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="Flex-box-col">
+                Email
+                <div class="Flex-box-field">
+                    <img src="~/Images/at.png" />
+                    @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                </div>
+                
+                Hasło
+                <div class="Flex-box-field">
+                    <img src="~/Images/padlock.png" />
+                    @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                </div>
+                Powtórz Hasło
+                <div class="Flex-box-field">
+                    <img src="~/Images/padlock.png" />
+                    @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                </div>
 
+                Imię
+                <div class="Flex-box-field">
+                    <img src="~/Images/name.png" />
+                    @Html.TextBoxFor(model => model.firstname, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.firstname, "", new { @class = "text-danger" })
+                </div>
 
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group" style="padding: 10px; font-size: 20px; border-bottom: 2px solid #4caf50;">
-        @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                Nazwisko
+                <div class="Flex-box-field">
+                    <img src="~/Images/name.png" />
+                    @Html.TextBoxFor(model => model.lastname, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.lastname, "", new { @class = "text-danger" })
+                </div>
+
+                Data urodzenia
+                <div class="Flex-box-field">
+                    <img src="~/Images/birthday.png" />
+                    @Html.TextBoxFor(model => model.birthdate, new { htmlAttributes = new { @class = "form-control" }, @type = "date" })
+                </div>
+                <div class="Flex-box-checkbox">
+                    @Html.CheckBox("isActive", false)
+                    Akceptuję regulamin
+                </div>
+                <input type="submit" value="Zarejestruj" />
+            </div>
         </div>
+    }
 
-    </div>
-    <!---->
-    <div class="form-group" style="padding: 10px;font-size: 20px; border-bottom: 2px solid #4caf50;">
-        @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group" style="padding: 10px;font-size: 20px; border-bottom: 2px solid #4caf50;">
-        @Html.LabelFor(model => model.firstname, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.firstname, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.firstname, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group" style="padding: 10px;font-size: 20px; border-bottom: 2px solid #4caf50;">
-        @Html.LabelFor(model => model.lastname, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.lastname, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.lastname, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group" style="padding: 10px;font-size: 20px; border-bottom: 2px solid #4caf50;">
-        @Html.LabelFor(model => model.birthdate, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.birthdate, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.birthdate, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
-
-</div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
+</main>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
