wykonane hashowanie danych

--- a/Views/Shared/_HomeLayout.cshtml
+++ b/Views/Shared/_HomeLayout.cshtml
@@ -21,7 +21,7 @@
             <div class="Flex-header-socials">
                 <img src="@Url.Content("~/Images/login.png")" />
                 @Html.ActionLink("Zaloguj", "Login", "User")
-                <img src="@Url.Content("~/Images/registration.png")" />
+                <img src="@Url.Content("~/Images/add_user.png")" />
                 @Html.ActionLink("Zarejestruj", "Regist", "User")
             </div>
         </header>
