--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -6,10 +6,8 @@
 }
 
 
-<div>
-    <h4>Użytkownik</h4>
-    <hr />
-    <dl class="dl-horizontal">
+<main>
+    <dl class="Flex-box-col">
         <dt>
             @Html.DisplayNameFor(model => model.email)
         </dt>
@@ -59,9 +57,5 @@
         </dd>
 
     </dl>
-</div>
-<p>
-    <!--blad w tej lini-->
-    @Html.ActionLink("Back to List", "Index")
-</p>
+</main>
 
