--- a/Content/FlexStyle.css
+++ b/Content/FlexStyle.css
@@ -1,5 +1,4 @@
 ﻿/**/
-/**/
 /*główny template*/
 /**/
 body {
@@ -96,14 +95,21 @@ body {
     align-items: center;
     justify-content: flex-start;
     font-family: Calibri;
+    color: white;
     flex-grow: 1;
-    
 }
 
-.Flex-header-socials > a{
-    margin-right: 20px;
-    margin-left: 5px;
-}
+    .Flex-header-socials img {
+        height: 25px;
+        width: 25px;
+        margin: 2px;
+        margin-left: 10px;
+    }
+
+    .Flex-header-socials > a{
+        margin-right: 20px;
+        margin-left: 5px;
+    }
 
 
 /*Część odpowiedzialna za logowanie i rejestracje*/
@@ -133,6 +139,7 @@ body {
     font-family: Calibri;
     font-weight: bold;
     color: white;
+    margin-top: 10%;
 
     display: flex;
     flex-direction: column;
@@ -158,7 +165,13 @@ body {
             opacity: 0.3;
         }
 
-.Flex-box-field {
+.Flex-box-field{
+    display: flex;
+    flex-direction: column;
+
+}
+
+.Flex-box-input {
     background-color: white;
     height: 36px;
     margin-bottom: 10px;
@@ -168,13 +181,13 @@ body {
     align-items: center;
 }
 
-    .Flex-box-field img{
+    .Flex-box-input img{
         height: 30px;
         width: 30px;
         margin: 3px;
     }
 
-    .Flex-box-field input {
+    .Flex-box-input input {
         height: 34px;
         width: 20vw;
         border: none;
