--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -4,22 +4,9 @@
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
-    @{ @*@using (Html.BeginForm()) { }
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-    @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-    @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-    @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
-    @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })*@
-     }
-
-
 <main>
     @using (Html.BeginForm())
     {
-        <h1>Prezentomat</h1>
-
         @Html.AntiForgeryToken()
         <div class="Flex-box-row">
             <div class="Flex-box-col">
@@ -27,14 +14,20 @@
 
                 Email
                 <div class="Flex-box-field">
-                    <img src="~/Images/at.png" />
-                    @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="Flex-box-input">
+                        <img src="~/Images/at.png" />
+                        @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
                     @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
                 </div>
+                
                 Hasło
                 <div class="Flex-box-field">
-                    <img src="~/Images/padlock.png" />
-                    @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="Flex-box-input">
+                        <img src="~/Images/padlock.png" />
+                        @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                    </div>
                     @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
                 </div>
                 <div class="Flex-box-checkbox">
