--- a/Views/User/Regist.cshtml
+++ b/Views/User/Regist.cshtml
@@ -5,56 +5,68 @@
     ViewBag.Title = "Regist";
 }
 
-
 <main>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-
-        <h1>Prezentomat</h1>
         <div class="Flex-box-row">
 
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="Flex-box-col">
-                Email
-                <div class="Flex-box-field">
-                    <img src="~/Images/at.png" />
-                    @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                <span>Email</span>
+                <div>
+                    <div class="Flex-box-input">
+                        <img src="~/Images/at.png" />
+                        @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
                     @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
                 </div>
-                
+
                 Hasło
-                <div class="Flex-box-field">
-                    <img src="~/Images/padlock.png" />
-                    @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                <div>
+                    <div class="Flex-box-input">
+                        <img src="~/Images/padlock.png" />
+                        @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
                     @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
                 </div>
+
                 Powtórz Hasło
-                <div class="Flex-box-field">
-                    <img src="~/Images/padlock.png" />
-                    @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                <div>
+                    <div class="Flex-box-input">
+                        <img src="~/Images/padlock.png" />
+                        @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
                     @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
                 </div>
 
                 Imię
-                <div class="Flex-box-field">
-                    <img src="~/Images/name.png" />
-                    @Html.TextBoxFor(model => model.firstname, new { htmlAttributes = new { @class = "form-control" } })
+                <div>
+                    <div class="Flex-box-input">
+                        <img src="~/Images/name.png" />
+                        @Html.TextBoxFor(model => model.firstname, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
                     @Html.ValidationMessageFor(model => model.firstname, "", new { @class = "text-danger" })
                 </div>
 
                 Nazwisko
-                <div class="Flex-box-field">
-                    <img src="~/Images/name.png" />
-                    @Html.TextBoxFor(model => model.lastname, new { htmlAttributes = new { @class = "form-control" } })
+                <div>
+                    <div class="Flex-box-input">
+                        <img src="~/Images/name.png" />
+                        @Html.TextBoxFor(model => model.lastname, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
                     @Html.ValidationMessageFor(model => model.lastname, "", new { @class = "text-danger" })
                 </div>
 
                 Data urodzenia
-                <div class="Flex-box-field">
-                    <img src="~/Images/birthday.png" />
-                    @Html.TextBoxFor(model => model.birthdate, new { htmlAttributes = new { @class = "form-control" }, @type = "date" })
+                <div>
+                    <div class="Flex-box-input">
+                        <img src="~/Images/birthday.png" />
+                        @Html.TextBoxFor(model => model.birthdate, new { htmlAttributes = new { @class = "form-control" }, @type = "date" })
+                    </div>
+                    @Html.ValidationMessageFor(model => model.birthdate, "", new { @class = "text-danger" })
                 </div>
+
                 <div class="Flex-box-checkbox">
                     @Html.CheckBox("isActive", false)
                     Akceptuję regulamin
