małe zmiany z repeat password

--- a/Content/FlexStyle.css
+++ b/Content/FlexStyle.css
@@ -36,6 +36,7 @@ body {
     justify-content: center;
     flex-grow: 0;
     color: white;
+    font-family:Calibri;
 }
 
 .Flex-header-logo {
@@ -219,3 +220,6 @@ body {
     }
 
 }
+
+
+
