--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,14 +3,33 @@
     ViewBag.Title = "Strona główna";
 }
 <main>
-    
-    <h1>
-        Witaj na stronie głównej!
 
-    </h1>
+    <div class="Flex-box-col">
 
-    <p>
-        Strona w budowie :)
-    </p>
+        <div class="Flex-box-row">
+
+            
+                   Nasza aplikacja powstała aby ułatwić organizację zbiórek na różne cele.
+                
+                
+                    Skorzystaj z niej! ;)
+
+
+        </div>
+        <hr style="width:200px;"/>
+        <div class="Flex-box-row">
+
+            Nie masz konta? Zarejestruj się.
+
+        </div>
+
+
+
+    </div>
+
+
+
+
+   
 
 </main>
