--- a/Views/Shared/_LayoutUser.cshtml
+++ b/Views/Shared/_LayoutUser.cshtml
@@ -15,7 +15,7 @@
     <div class="Flex-container">
         <header>
             <div class="Flex-header-logo">
-                <a href="@Url.Action("Index", "Home")">
+                <a href="@Url.Action("Index", "User")">
                     <img src="@Url.Content("~/Images/logo-prezentomat.png")" />
                 </a>
             </div>
