--- a/Views/User/Regist.cshtml
+++ b/Views/User/Regist.cshtml
@@ -35,9 +35,9 @@
                 <div>
                     <div class="Flex-box-input">
                         <img src="~/Images/padlock.png" />
-                        @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.PasswordFor(model => model.repeat_password, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
-                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.repeat_password, "", new { @class = "text-danger" })
                 </div>
 
                 Imię
