--- a/Content/FlexStyle.css
+++ b/Content/FlexStyle.css
@@ -7,8 +7,8 @@ body {
 }
 
 .Flex-container {
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
     background-color: darkgray;
     display: flex;
     flex-direction: column;
@@ -112,12 +112,18 @@ body {
     align-items: center;
 }
 
-.Flex-box-row{
+.Clear-flex-box-row{
     display: flex;
     flex-direction: row;
 }
 
+.Clear-flex-box-col {
+    display: flex;
+    flex-direction: column;
+}
+
 .Flex-box-col {
+    max-width: 243px;
     background-color: #0D0D0D;
     border-radius: 20px;
     padding: 3vw 3vh;
@@ -125,15 +131,18 @@ body {
     font-weight: bold;
     color: white;
     margin-top: 10%;
+    margin-bottom: 10%;
 
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
+    
+    
 }
 
 
-
+/*przycisk zaloguj*/
     .Flex-box-col > input {
         align-self: flex-end;
         background: none;
@@ -152,17 +161,17 @@ body {
         }
 
 .validation-summary-errors {
-    display: block;
-    width: 20vw;
-    color: red !important;
+    color: red;
     text-align: left;
     line-height: 150%;
+    display: flex;
 }
 
-    .validation-summary-errors ul{
+    .validation-summary-errors ul {
         padding-left: 20px;
-        margin: 0px;
+        margin: 0px 0px;
     }
+
 
 .Flex-box-input {
     background-color: white;
@@ -182,7 +191,7 @@ body {
 
     .Flex-box-input input {
         height: 34px;
-        width: 20vw;
+        max-width: 120%;
         border: none;
         font-family: Calibri;
         font-size: 20px;
@@ -190,7 +199,6 @@ body {
 
 .Flex-box-checkbox{
     list-style-type: none;
-
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
