--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
     <div class="Flex-box-col">
 
-        <div class="Flex-box-row">
+        <div class="Clear-flex-box-row">
 
             
                    Nasza aplikacja powstała aby ułatwić organizację zbiórek na różne cele.
