--- a/Views/Shared/_HomeLayout.cshtml
+++ b/Views/Shared/_HomeLayout.cshtml
@@ -27,7 +27,7 @@
         </header>
             @RenderBody()
         <footer>
-            <p>&copy; @DateTime.Now.Year - WAT WCY18IJ1S1</p>
+            <span>&copy; @DateTime.Now.Year - WAT WCY18IJ1S1</span>
         </footer>
     </div>
 
