--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -8,31 +8,32 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        <div class="Flex-box-row">
+        <div class="Clear-flex-box-row">
             <div class="Flex-box-col">
 
 
                 Email
-
-                <div class="Flex-box-input">
-                    <img src="~/Images/at.png" />
-                    @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/at.png" />
+                        @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
                 </div>
-
 
                 Hasło
-
-                <div class="Flex-box-input">
-                    <img src="~/Images/padlock.png" />
-                    @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/padlock.png" />
+                        @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
                 </div>
+                    <div class="Flex-box-checkbox">
+                        @Html.CheckBox("isActive", false)
+                        Zapamiętaj mnie!
+                    </div>
+                    <input type="submit" value="Zaloguj" />
 
-                <div class="Flex-box-checkbox">
-                    @Html.CheckBox("isActive", false)
-                    Zapamiętaj mnie!
-                </div>
-                <input type="submit" value="Zaloguj" />
-                @Html.ValidationSummary(false, "")
+                    @Html.ValidationSummary(false, "")
 
             </div>
         </div>
