--- a/Views/User/Regist.cshtml
+++ b/Views/User/Regist.cshtml
@@ -8,64 +8,64 @@
 <main>
     @using (Html.BeginForm())
     {
-        @Html.AntiForgeryToken()
-        <div class="Flex-box-row">
+        
+        <div class="Clear-flex-box-row">
 
                         
             <div class="Flex-box-col">
-                <span>Email</span>
-                
+                Email
+                <div class="Clear-flex-box-col">
                     <div class="Flex-box-input">
                         <img src="~/Images/at.png" />
-                        @Html.TextBoxFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextBoxFor(model => model.email)
                     </div>
-                    @*@Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })*@
-                
+                    
+                </div>
 
                 Hasło
-                
+                <div class="Clear-flex-box-col">
                     <div class="Flex-box-input">
                         <img src="~/Images/padlock.png" />
-                        @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.PasswordFor(model => model.password)
                     </div>
-                    @*@Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })*@
-                
+                  
+                </div>
 
                 Powtórz Hasło
-                
+                <div class="Clear-flex-box-col">
                     <div class="Flex-box-input">
                         <img src="~/Images/padlock.png" />
-                        @Html.PasswordFor(model => model.repeat_password, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.PasswordFor(model => model.repeat_password)
                     </div>
-                    @*@Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })*@
-                
+                   
+                </div>
 
                 Imię
-                
+                <div class="Clear-flex-box-col">
                     <div class="Flex-box-input">
                         <img src="~/Images/name.png" />
-                        @Html.TextBoxFor(model => model.firstname, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextBoxFor(model => model.firstname)
                     </div>
-                    @*@Html.ValidationMessageFor(model => model.firstname, "", new { @class = "text-danger" })*@
-                
+                   
+                </div>
 
                 Nazwisko
-                
+                <div class="Clear-flex-box-col">
                     <div class="Flex-box-input">
                         <img src="~/Images/name.png" />
-                        @Html.TextBoxFor(model => model.lastname, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextBoxFor(model => model.lastname)
                     </div>
-                    @*@Html.ValidationMessageFor(model => model.lastname, "", new { @class = "text-danger" })*@
-                
+                    
+                </div>
 
                 Data urodzenia
-                
+                <div class="Clear-flex-box-col">
                     <div class="Flex-box-input">
                         <img src="~/Images/birthday.png" />
-                        @Html.TextBoxFor(model => model.birthdate, new { htmlAttributes = new { @class = "form-control" }, @type = "date" })
+                        @Html.TextBoxFor(model => model.birthdate)
                     </div>
-                    @*@Html.ValidationMessageFor(model => model.birthdate, "", new { @class = "text-danger" })*@
-                
+                    
+                </div>
 
                 <div class="Flex-box-checkbox">
                     @Html.CheckBox("isActive", false)
@@ -74,11 +74,12 @@
                 <input type="submit" value="Zarejestruj" />
 
                 
-                    @Html.ValidationSummary(false, "")
-                
-                
+
+                @Html.ValidationSummary(false, "")
+
+
             </div>
-        </div>
+            </div>
     }
 
 </main>
