--- a/Views/Shared/_HomeLayout.cshtml
+++ b/Views/Shared/_HomeLayout.cshtml
@@ -19,7 +19,7 @@
             </div>
 
             <div class="Flex-header-buttons">
-
+                @Html.ActionLink("Moje zbiórki", "Index", "Gathering")
             </div>
             <div class="Flex-header-socials">
                 <img src="@Url.Content("~/Images/login.png")" />
