--- a/Views/Shared/_LayoutUser.cshtml
+++ b/Views/Shared/_LayoutUser.cshtml
@@ -21,7 +21,7 @@
                 <a id="menu-button" onclick="openAndCloseNav()">☰</a>
             </div>
             <div class="Flex-header-buttons">
-
+                @Html.ActionLink("Moje zbiórki", "Index", "Gathering")
             </div>
             <div class="Flex-header-socials">
                 Witaj @user_name!
