--- a/Views/User/Regist.cshtml
+++ b/Views/User/Regist.cshtml
@@ -71,7 +71,8 @@
                     @Html.CheckBox("isActive", false)
                     Akceptuję regulamin
                 </div>
-                <input type="submit" value="Zarejestruj" />
+                <br>
+                <input type="submit" value="Zarejestruj" style="border: 1px solid; border-radius: 15px" />
 
 
 
