--- a/Views/Gathering/Delete.cshtml
+++ b/Views/Gathering/Delete.cshtml
@@ -1,40 +1,74 @@
 ﻿@model Prezentomat.Models.GatheringClass
 
 @{
-    ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
 }
 
-<h2>Delete</h2>
+<!DOCTYPE html>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>GatheringClass</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.target_amount)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.target_amount)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.finish_date)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.finish_date)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Delete</title>
+</head>
+<main>
+<body>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>GatheringClass</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.current_amount)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.current_amount)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.target_amount)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.target_amount)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.finish_date)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.finish_date)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.gathering_name)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.gathering_name)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.creator_id)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.creator_id)
+            </dd>
+    
+        </dl>
+    
+        @using (Html.BeginForm()) {
+            @Html.AntiForgeryToken()
+    
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
+</body>
+    </main>
+</html>
